# User-Interfaces

./: README.md
Code/: helloworld.cpp  namespaces.cpp
Code/advanced/: areaofsquare  areaofsquare.cpp  function  function.cpp
Code/basic/: helloworld  ifstatements  ifstatements.cpp  input  input.cpp  math  math.cpp  switch  switch.cpp
Code/projects/bank/: bank  bank.cpp
Code/projects/calculator/: calc  calc.cpp
Code/projects/hypotenuse/: hypotenusecalc  hypotenusecalc.cpp
Code/projects/numguess/: numberguesser  numberguesser.cpp
Code/projects/tempconverter/: tempconv  tempconv.cpp
Code/using&typedef/: namespaces  typedef  typedef.cpp
Exercises/Clas/: rect.cpp  rect.hpp  testrect.cpp
Exercises/Intro/: createvector.cpp
Exercises/Intro/Mean/: mean.cpp  mean.txt
Exercises/programwidgetlayout/hbox/: CMakeLists.txt  main.cpp
Lectures/01/: lect01.html
Lectures/01/src/: CMakeLists.txt  README.md  example.c  example.cpp  example2.cpp  iodemo.cpp  iodemo2.cpp  stringdemo.cpp  utils.cpp  utils.hpp  vecdemo.cpp
Lectures/03/: lect03.html
Lectures/03/src/: CMakeLists.txt  Circle.java  README.md  circdemo.cpp  circdemo2.cpp  circle.cpp  circle.hpp  circle2.cpp
Lectures/05/: lect05.html
Lectures/05/src/: README.md
Lectures/05/src/cpp/: CMakeLists.txt  README.md  array.cpp  array.hpp  arraytest.cpp
Lectures/05/src/qt/: README.md
Lectures/07/: lect07.html
Lectures/07/src/: README.md
Lectures/07/src/browser/: CMakeLists.txt  README.md
Lectures/07/src/button/: CMakeLists.txt  README.md  main.cpp
Lectures/07/src/checkbox/: CMakeLists.txt  README.md  main.cpp
Lectures/07/src/combo/: CMakeLists.txt  main.cpp
Lectures/07/src/form/: CMakeLists.txt  README.md  main.cpp
Lectures/07/src/gif/: CMakeLists.txt  README.md  main.cpp
Lectures/07/src/grid/: CMakeLists.txt  README.md  main.cpp
Lectures/07/src/imgview/: CMakeLists.txt  README.md  main.cpp
Lectures/07/src/label/: CMakeLists.txt  main.cpp
Lectures/07/src/msgbox/: CMakeLists.txt  README.md  main.cpp
Lectures/07/src/nested/: CMakeLists.txt  main.cpp
Lectures/07/src/number/: CMakeLists.txt  README.md  main.cpp
Lectures/07/src/pixmap/: CMakeLists.txt  README.md  main.cpp
Lectures/07/src/radio/: CMakeLists.txt  README.md  main.cpp
Lectures/07/src/slider/: CMakeLists.txt  main.cpp
Lectures/07/src/spinbox/: CMakeLists.txt  main.cpp
Lectures/07/src/tabs/: CMakeLists.txt  README.md  (+1 more)
Lectures/08/: lect08.html
Lectures/08/src/: README.md
Lectures/08/src/control/: CMakeLists.txt  README.md  controller.cpp  controller.hpp  main.cpp
Lectures/08/src/editor/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
cwk1/: dataset.cpp  dataset.hpp  quake.cpp
testQt/: CMakeLists.txt  hello.cpp
(+14 files in other folders)
